// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders loading 1`] = `
<div
  className="loading"
  style={
    Object {
      "marginTop": -0,
    }
  }
>
  <div>
    <div
      className="loader"
    >
      <div
        className="circle"
      />
      <div
        className="circle"
      />
      <div
        className="circle"
      />
      <div
        className="circle"
      />
      <div
        className="circle"
      />
    </div>
    <p>
      
    </p>
  </div>
</div>
`;

exports[`Loading renders small loading 1`] = `
<div
  className="loading loading--small"
  style={Object {}}
>
  <div>
    <div
      className="loader"
    >
      <div
        className="circle"
      />
      <div
        className="circle"
      />
      <div
        className="circle"
      />
      <div
        className="circle"
      />
      <div
        className="circle"
      />
    </div>
  </div>
</div>
`;
